[package]
name = "keyword_api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking"]}
rocket = "0.5.0-rc.2"
serde_json = "1.0.83"
lazy_static = "1.4.0"
random_choice = "0.3.2"
randua = "0.1.6"
rand = "0.8.5"
log = "0.4.17"
fern = "0.6.1"
env_logger = "0.9.0"
